# Mult-Agents-Literature-System

./: .gitattributes  .gitignore  EviReview-Lite_完整实验方案与系统架构流程设计.md
apps/web/: app.js  index.html  styles.css
docs/design/: agent_rag_frontend_backend_refactor_architecture_2026-06-02.md  (+2 more)
memory/: RESEARCH_LOG.md
参考论文/: README_目录说明.md
实验/: .env.example  .gitignore  ARCHITECTURE.md  EXECUTION_PLAN.md  PROGRESS.md  README.md  pyproject.toml
实验/新实验/evireview_lite/: .gitignore  PROGRESS.md  README.md  pyproject.toml
实验/新实验/evireview_lite/conf/: base.yaml
实验/新实验/evireview_lite/conf/experiments/: e0_data.yaml
实验/新实验/evireview_lite/dataset/: DATASET_REPORT.md
实验/新实验/evireview_lite/dataset/raw/: README.md
实验/新实验/evireview_lite/scripts/: download_arxiv_unseen.py  validate_dataset_bootstrap.py
实验/新实验/evireview_lite/src/evireview/dao/: __init__.py  source_clients.py
实验/新实验/evireview_lite/src/evireview/models/: weakness.py
实验/新实验/evireview_lite/src/evireview/rag/: __init__.py  fusion.py  index_store.py
实验/新实验/evireview_lite/src/evireview/service/: paper_ingestion_service.py
实验/新实验/evireview_lite/tests/unit/: test_paper_ingestion.py
废旧开题报告/: 开题报告与文献综述：基于证据验证的多智能体 RAG 学术论文自动评审与分类系统.md  开题用_创新点与架构设计_简化定稿.md  近三年论文逐篇精读分类报告_面向EviReview系统.md
归档/: 其他开题报告与架构设计_2026-06-12.sha256  归档后目录重组说明_2026-06-12.md  旧OMX研究上下文_2026-06-12.files.txt  旧OMX研究上下文_2026-06-12.sha256  旧实验完整归档_2026-06-12.sha256  最终归档验证_2026-06-12.txt
设计方案/: 实验方案.md  最新开题报告.md  最新版完整开题报告_多Agent_RAG证据审计自动论文评审与评估系统_2026-06-13.md  最新版开题报告_基于双向证据审计的轻量多Agent_RAG学术论文自动评审与评估研究_2026-06-12.md  设计方案.md
(+704 files in other folders)
